# FastAPI_Study

./: .gitignore  ReadMe.md
Python/FastAPI/Basic/: DockerFIle  pyproject.toml
Python/FastAPI/Basic/FastAPIStudy/: hello.py
Python/FastAPI/Basic/FastAPIStudy/exam/service/: tag.py
Python/FastAPI/Basic/FastAPIStudy/exam/web/: tag.py
Python/FastAPI/Basic/FastAPIStudy/exam02/: data.py  model.py  web.py  web02.py
Python/FastAPI/Basic/FastAPIStudy/exam02/model/: model.py
Python/FastAPI/Basic/FastAPIStudy/exam03/src/: main.py
Python/FastAPI/Basic/FastAPIStudy/exam03/src/fake/: creature.py  explorer.py
Python/FastAPI/Basic/FastAPIStudy/exam03/src/service/: creature.py
Python/FastAPI/Basic/FastAPIStudy/exam03/src/web/: creature.py  explorer.py
Python/FastAPI/Basic/FastAPIStudy/main/: greet_async.py
Python/FastAPI/Basic/Todo/APIRouter/: todo.py
Python/FastAPI/Basic/hoseoswproject/todos/: main.py  model.py  todo.py
Python/FastAPI/Basic/hoseoswproject/todos/templates/: home.html  todo.html
Python/FastAPI/Basic/main/APIRouter/: model.py  todo.py
Python/FastAPI/Basic/main/pydantic/: 01.py
Python/FastAPI/Basic/planner/: main.py
Python/FastAPI/Basic/planner/database/: connection.py
Python/FastAPI/Basic/planner/models/: events.py  users.py
Python/FastAPI/Basic/planner/routes/: events.py  users.py
Python/Flask/: app.py  app01.py  app03.py  app04.py  app05.py  app06.py  pyproject.toml
Python/django_Prec/: pyproject.toml
Python/django_Prec/pyburger/bugers/: admin.py  apps.py
Python/django_Prec/pyburger/config/: settings.py  views.py
(+16 files in other folders)
